--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 		<div class="logo"><a href="/">greenhunt2003</a></div>
 		<div class="navigation">
 			<a href="/">Home Page</a>
-			<a href="portfolio.html">Videos</a>
+			<a href="videos.html">Videos</a>
 			<a href="subscriber_count.html">Subscriber Count</a>
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
 			<a href="contact.html">Contact Page</a>
 		</div>
 		<div class="main_content">
 			<h1>Welcome to greenhunt2003!</h1>
-			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators based in YouTube and Vlare.</p>
+			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators and gamers based in YouTube and Vlare.</p>
 			<p>Hello everyone, this is greenhunt2003 (formerly known as mscrafter2003), and welcome to my website.</p>
 			<p>I make Text-to-speech (TTS) videos, and I play a bunch of games. I do programming as well.</p>
-			Current Series I am running right now:
+			Current series I am running right now:
 			<ul>
 				<li>The Microsoft Sam and friends Show (Text-to-speech series)</li>
 				<li>Microsoft Anna plays Minecraft (changed from Microsoft David plays Minecraft) (A Text-to-speech Gaming series)</li>
