--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 		<title>Welcome to greenhunt2003!</title>
 	</head>
 	<body>
-		<div class="logo"><a href="/">greenhunt2003</a></div>
+		<div class="logo"><a href="/">greenhunt2003</a></div><br>
 		<div class="navigation">
 			<a href="/">Home Page</a>
 			<a href="videos.html">Videos</a>
 			<a href="subscriber_count.html">Subscriber Count</a>
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
-			<a href="contact.html">Contact Page</a>
-		</div>
+		</div><br>
 		<div class="main_content">
 			<h1>Welcome to greenhunt2003!</h1>
 			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators and gamers based in YouTube and Vlare.</p>
@@ -32,7 +31,7 @@
 				<li><a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">greenhunt2003's Computer Specifications Sheet</a></li>
 				<li><a href="https://discord.gg/YADG86k">Join the Discord Server</a></li>
 			</ul>
-		</div>
+		</div><br>
 		<div class="footer">
 			Copyright <span id="current_year"> by greenhunt2003.
 		</div>
