--- a/subscriber_count.html
+++ b/subscriber_count.html
@@ -15,8 +15,9 @@
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
 		</div><br>
 		<div class="main_content">
-			<h1>greenhunt2003's Videos</h1>
-      <p>Here are some of the videos created by greenhunt2003. For a full list of videos, go to <a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">his channel</a>
+			<h1>Subscriber Count</h1>
+			<p>Here you can see how many subscribers greenhunt2003 has. <a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">Subscribe now!</a></p>
+      <iframe height="100px" width="350px" frameborder="0" src="https://livecounts.org/live-sub-count/greenhunt2003" allowfullscreen></iframe>
 		</div><br>
 		<div class="footer">
 			Copyright <span id="current_year"> by greenhunt2003.
