added current_year.js in scripts to return the current date and time.

--- a/subscriber_count.html
+++ b/subscriber_count.html
@@ -20,7 +20,8 @@
       <iframe height="100px" width="350px" frameborder="0" src="https://livecounts.org/live-sub-count/greenhunt2003" allowfullscreen></iframe>
 		</div><br>
 		<div class="footer">
-			Copyright <span id="current_year"> by greenhunt2003.
+			Copyright <span id="current_year"></span> by greenhunt2003.
 		</div>
+    <script src="scripts/current_time.js" type="text/javascript"></script>
 	</body>
 </html>
