--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 			</ul>
 		</div><br>
 		<div class="footer">
-			Copyright <span id="current_year"> by greenhunt2003.
+			Copyright <span id="current_year"></span> by greenhunt2003.
 		</div>
+    <script src="scripts/current_time.js" type="text/javascript"></script>
 	</body>
 </html>
