--- a/videos.html
+++ b/videos.html
@@ -19,7 +19,8 @@
       <p>Here are some of the videos created by greenhunt2003. For a full list of videos, go to <a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">his channel</a>
 		</div><br>
 		<div class="footer">
-			Copyright <span id="current_year"> by greenhunt2003.
+			Copyright <span id="current_year"></span> by greenhunt2003.
 		</div>
+    <script src="scripts/current_time.js" type="text/javascript"></script>
 	</body>
 </html>
