--- a/downloads.html
+++ b/downloads.html
@@ -45,7 +45,7 @@
 			<h1>Downloads</h1>
       <p>This page contains a list of apps and files you can use.</p>
       <h3>ghBot</h3>
-      <p>A Discord Chat Bot that can includes features such as the ability to generate text documents, view your latency, calculate numbers and roll a dice. Written in Python.</p>
+      <p>A Discord Chat Bot that includes features such as the ability to generate text documents, view your latency, calculate numbers and roll a dice. Written in Python.</p>
       <button class="downloadbutton" onclick="window.location = 'https://discord.com/api/oauth2/authorize?client_id=760516268784353370&permissions=8&scope=bot'">Invite this bot to your server (Current version: Beta 1.32)</button>
       <button class="disabledbutton" onclick="alert('The source code for this application is not available yet. Sorry for the inconvenience.')"><strike>View source code</strike></button>
 		</div><br>
