--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 			<h1>Welcome to greenhunt2003!</h1>
 			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators and gamers based in YouTube and Vlare.</p>
 			<p>Hello everyone, this is greenhunt2003 (formerly known as mscrafter2003), and welcome to my website.</p>
-			<p>I make Text-to-speech (TTS) videos, and I play a bunch of games. I do programming as well.</p>
-			Current series I am running right now:
+			<p>I make Text-to-speech (TTS) and gaming videos. I do some programming as well.</p>
+			Current Text-to-speech series I am running right now:
 			<ul>
 				<li>The Microsoft Sam and friends Show (Text-to-speech series)</li>
-				<li>Microsoft Anna plays Minecraft (changed from Microsoft David plays Minecraft) (A Text-to-speech Gaming series)</li>
+				<li>Microsoft Anna plays Minecraft (formerly Microsoft David plays Minecraft) (A Text-to-speech Gaming series)</li>
 			</ul>
+      <p>Creating videos and other types of content is just my hobby. I have no particular schedule to make content, as they will put pressure on me and I don't want to be forced by people to make content for them. I only make and release videos and content whenever and whatever I desire.</p>
 			<p>If you want to see what I use for video production and gaming, check out my <a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">computer specs sheet</a></p>
 			<p><strong>Related Links:</strong></p>
 			<ul>
 				<li><a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">greenhunt2003's YouTube Channel</a></li>
+        <li><a href="https://www.vidlii.com/user/greenhunt">greenhunt2003 VidLii Channel</a></li>
 				<li><a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">greenhunt2003's Computer Specifications Sheet</a></li>
 				<li><a href="https://discord.gg/YADG86k">Join the Discord Server</a></li>
 			</ul>
