--- a/downloads.html
+++ b/downloads.html
@@ -44,6 +44,7 @@
       <h3>ghBot</h3>
       <p>A Discord Chat Bot that includes features such as the ability to generate text documents, view your latency, calculate numbers and roll a dice. Written in Python.</p>
       <button class="button" onclick="window.location = 'https://discord.com/api/oauth2/authorize?client_id=760516268784353370&permissions=8&scope=bot'">Invite this bot to your server (Current version: Beta 1.32)</button>
+      <button class="button" onclick="window.location = ''">View Release Notes</button>
       <button class="button" disabled>View source code (not available for release yet)</button>
 		</div><br>
 		<div class="footer">
