--- a/videos.html
+++ b/videos.html
@@ -18,6 +18,14 @@
 		<div class="main_content">
 			<h1>greenhunt2003's Videos</h1>
       <p>Here are some of the videos created by greenhunt2003. For a full list of videos, go to <a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">his channel</a>
+      <h3>Microsoft Anna plays Minecraft (Skyblock Survival Episode)</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Jp5aIrpl2yQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>Microsoft David plays Minecraft (Simple Survival Episode)</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/OICWjtwYsuw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>Microsoft Sam and friends Banner Timelapse (in Microsoft PowerPoint)</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/k_Si6krqy-s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>greenhunt2003 Channel Intro 3</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/zAMovr5l9Fk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div><br>
 		<div class="footer">
 			Copyright <span id="current_year"></span> by greenhunt2003.
