--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div><br>
 		<div class="main_content">
 			<h1>Welcome to greenhunt2003!</h1>
-			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators and gamers based in YouTube and Vlare.</p>
+			<p>Welcome to greenhunt2003's website, home of one of the text-to-speech creators and gamers based in YouTube, Vidlii and Vlare.</p>
 			<p>Hello everyone, this is greenhunt2003 (formerly known as mscrafter2003), and welcome to my website.</p>
 			<p>I make Text-to-speech (TTS) and gaming videos. I do some programming as well.</p>
 			Current Text-to-speech series I am running right now:
@@ -30,7 +30,7 @@
 			<p><strong>Related Links:</strong></p>
 			<ul>
 				<li><a href="https://www.youtube.com/channel/UCxRKKUIrTWDaMeQ4UBJQ4Pg/">greenhunt2003's YouTube Channel</a></li>
-        <li><a href="https://www.vidlii.com/user/greenhunt">greenhunt2003 VidLii Channel</a></li>
+        <li><a href="https://www.vidlii.com/user/greenhunt">greenhunt2003's VidLii Channel</a></li>
 				<li><a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">greenhunt2003's Computer Specifications Sheet</a></li>
 				<li><a href="https://discord.gg/YADG86k">Join the Discord Server</a></li>
 			</ul>
