--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li>The Microsoft Sam and friends Show (Text-to-speech series)</li>
 				<li>Microsoft Anna plays Minecraft (formerly Microsoft David plays Minecraft) (A Text-to-speech Gaming series)</li>
 			</ul>
-      <p>Creating videos and other types of content is just my hobby. I have no particular schedule to make content, as they will put pressure on me and I don't want to be forced by people to make content for them. I only make and release videos and content whenever and whatever I desire.</p>
+      <p>Creating videos and other types of content is just my hobby. I have no particular schedule to make content, for that I will be pressured and I don't want to be forced by people to make content for them. I only make and release videos and content whenever and whatever I desire.</p>
 			<p>If you want to see what I use for video production and gaming, check out my <a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">computer specs sheet</a></p>
 			<p><strong>Related Links:</strong></p>
 			<ul>
