--- a/downloads.html
+++ b/downloads.html
@@ -42,10 +42,9 @@
 			<h1>Downloads</h1>
       <p>This page contains a list of apps and files you can use.</p>
       <h3>ghBot</h3>
-      <p>A Discord Chat Bot that lets you generate error messages, view your latency, generate text documents, calculate numbers, roll a dice and other things. Written in Python.</p>
+      <p>A Discord Chat Bot that lets you generate error messages, view your latency, generate text documents and other things!</p>
       <button class="button" onclick="window.location = 'https://discord.com/api/oauth2/authorize?client_id=760516268784353370&permissions=8&scope=bot'">Invite this bot to your server (Current version: Beta 1.89)</button>
       <button class="button" onclick="window.location = 'ghBot_release_notes.txt'">View Release Notes</button>
-      <button class="button" disabled>View source code (not available for release yet)</button>
 		</div><br>
 		<div class="footer">
 			Copyright <span id="current_year"></span> by greenhunt2003.
