--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 		<div class="navigation">
 			<a href="/">Home Page</a>
 			<a href="videos.html">Videos</a>
-      <a href="downloads.html">Downloads</a>
+      <a href="projects.html">Projects</a>
 			<a href="subscriber_count.html">Subscriber Count</a>
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
 		</div><br>
 		<div class="main_content">
 			<h1>Welcome to greenhunt2003!</h1>
-			<p>Hello everyone, this is greenhunt2003 (formerly known as mscrafter2003), and welcome to my website.</p>
-			<p>I make Text-to-speech (TTS) and gaming videos. I do some programming as well, at least for the fun of it. </p>
-      <p>Creating content, including videos, is just my hobby. I have no particular schedule to make content, for that I will be pressured and I don't want to be forced by people to make content for them. I only make and release videos and content whenever and whatever I desire.</p>
+			<p>Hello everyone, this is greenhunt2003 (formerly known as mscrafter2003), and this is my personal website.</p>
+			<p>I make Text-to-speech (TTS) and Gaming videos for fun. I do programming as well. </p>
 			<p>If you want to see what I use for video production and gaming, check out my <a href="https://docs.google.com/document/d/e/2PACX-1vRUWZC24etEPQS6au1c_kcUxP7XiRAtl0Bl0BRV13YQr3gmLxQfcBWqPTFI26oRkDUZY2kg4Qi8wXBc/pub">computer specs sheet</a></p>
 			<p><strong>Related Links:</strong></p>
 			<ul>
