--- a/projects.html
+++ b/projects.html
@@ -4,29 +4,6 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style/style.css" type="text/css">
 		<link rel="icon" href="images/greenhunt2003 Channel Icon.png" type="image/png">
-    <style type="text/css">
-      .button {
-        background-color: chartreuse;
-        color: #000;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 12px;
-        margin: 4px 2px;
-      }
-      .button:hover {
-        background-color: #000000;
-        color: #fff;
-      }
-      .button:disabled {
-        background-color: #f1f1f1;
-      }
-      .button:disabled:hover {
-        color: #000;
-        cursor: not-allowed;
-      }
-    </style>
 		<title>Welcome to greenhunt2003!</title>
 	</head>
 	<body>
@@ -34,7 +11,7 @@
 		<div class="navigation">
 			<a href="/">Home Page</a>
 			<a href="videos.html">Videos</a>
-      <a href="downloads.html">Downloads</a>
+      <a href="projects.html">Projects</a>
 			<a href="subscriber_count.html">Subscriber Count</a>
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
 		</div><br>
