--- a/videos.html
+++ b/videos.html
@@ -11,7 +11,7 @@
 		<div class="navigation">
 			<a href="/">Home Page</a>
 			<a href="videos.html">Videos</a>
-      <a href="downloads.html">Downloads</a>
+      <a href="projects.html">Projects</a>
 			<a href="subscriber_count.html">Subscriber Count</a>
 			<a href="https://discord.gg/YADG86k">Discord Server</a>
 		</div><br>
