--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,9 @@
       <p>A Discord Chat Bot that lets you generate error messages, view your latency, generate text documents and other things!</p>
       <button class="button" onclick="window.location = 'https://discord.com/api/oauth2/authorize?client_id=760516268784353370&permissions=8&scope=bot'">Invite this bot to your server (Current version: Beta 1.89)</button>
       <button class="button" onclick="window.location = 'ghBot_release_notes.txt'">View Release Notes</button>
+      <h3>Playzynger</h3>
+      <p>Playzynger is a media sharing and streaming platform where you can share your videos and music with friends and family. Entertain, Elevate, Inspire!</p>
+      <button class="button" disabled>View Playzynger</button>
 		</div><br>
 		<div class="footer">
 			Copyright <span id="current_year"></span> by greenhunt2003.
